Changes ArrayList to LinkedList to allow for use of removeFirst/getLast type code. Fixed issue with dragging cards onto empty lane.
Signed-off-by: Ian Lake <ian.hannibal.lake@gmail.com>